# semirings

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  build  cabal.haskell-ci  cabal.project  cabal.txt  default.nix  haddock.sh  hie.yaml  nix-ci-ish  release.nix  semirings.cabal  shell.nix  stack.yaml  star.cabal
.github/workflows/: ci.yml  haskell-ci.yml
Data/: Euclidean.hs  Euclidean.hs-boot  Field.hs  Poly.hs  Ring.hs  Semiring.hs  Semiring.hs-boot  Star.hs  Tropical.hs
Data/Ring/: Ordered.hs
Data/Semiring/: Directed.hs  Fib.hs  Free.hs  Generic.hs  Matrix.hs  Numeric.hs  Poly.hs  RingPoly.hs  Tropical.hs
Data/Tropical/: Max.hs  Min.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
dist-newstyle/packagedb/ghc-8.2.0.20170507/: package.cache  star-0.0.0.1-inplace.conf
nix/haskell/: coerce-util.nix  constrictor.nix
src/: Star.hs
test/: LICENSE  README.md  cabal.project  main.hs  semirings-test.cabal  semirings-tests.cabal
