---------------------------------------------------------------------

name:                      star
version:                   0.0.1.0
build-type:                Simple
cabal-version:             >= 1.10
category:                  Data
author:                    Daniel Cartwright
maintainer:                dcartwright@layer3com.com
license:                   BSD3
license-file:              LICENSE
homepage:                  https://github.com/chessai/star#readme
bug-reports:               https://github.com/chessai/star/issues
synopsis:                  *-semirings
description:               *-semirings of types in base
extra-source-files:        README.md
tested-with:               GHC == 8.0.2, GHC == 8.2.1, GHC == 8.2.2

---------------------------------------------------------------------

source-repository head
    type:                git
    branch:              master
    location:            https://github.com/chessai/star.git

---------------------------------------------------------------------

library
    build-depends:         base       >= 4.8     && <  5.0
    exposed-modules:       Data.Star
                         , Data.Semiring
    default-language:      Haskell2010
---------------------------------------------------------------------
