Name:           semirings-tests
Version:        0.1
License:        BSD3
License-File:   LICENSE

Author:         chessai
Maintainer:     chessai <chessai1996@gmail.com>
Copyright:      (c) chessai
Homepage:       https://github.com/chessai/semirings
Bug-Reports:    https://github.com/chessai/semirings
Category:       Data
Synopsis:       semirings tests
Cabal-Version:  >= 1.10
Build-Type:     Simple
Description:    @semirings@ tests
Tested-With:    GHC == 7.10.3
              , GHC == 8.0.2
              , GHC == 8.2.2
              , GHC == 8.4.4
              , GHC == 8.6.5
              , GHC == 8.8.3
              , GHC == 8.10.1

test-suite test
  Default-Language: Haskell2010
  hs-source-dirs: .
  main-is: main.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , QuickCheck
               , base-orphans
               , containers
               , hashable
               , quickcheck-classes
               , quickcheck-instances
               , semirings
               , tasty
               , tasty-quickcheck
               , unordered-containers
  ghc-options: -O2

source-repository head
  type:     git
  location: https://github.com/chessai/semirings
  subdir:   test
